[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tree/Interface/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Tree/Interface/MainMenu/OptionsOld/Options.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tree/Interface/MainMenu/About/About.tscn" type="PackedScene" id=3]





[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.120504, 0.120504, 0.120504, 0.588235 )

[node name="PauseMenu" type="CanvasLayer"]
layer = 9
script = ExtResource( 1 )

[node name="H" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0
alignment = 1

[node name="V" type="VBoxContainer" parent="H"]
margin_right = 69.0
margin_bottom = 952.0
alignment = 1

[node name="bContinue" type="Button" parent="H/V"]
margin_top = 430.0
margin_right = 69.0
margin_bottom = 450.0
text = "Continue"

[node name="bOptions" type="Button" parent="H/V"]
margin_top = 454.0
margin_right = 69.0
margin_bottom = 474.0
text = "Options"

[node name="bAbout" type="Button" parent="H/V"]
margin_top = 478.0
margin_right = 69.0
margin_bottom = 498.0
text = "About"

[node name="bQuit" type="Button" parent="H/V"]
margin_top = 502.0
margin_right = 69.0
margin_bottom = 522.0
text = "Quit"

[node name="T" type="TabContainer" parent="H"]
margin_left = 73.0
margin_right = 1792.0
margin_bottom = 952.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
tabs_visible = false

[node name="Empty" type="Control" parent="H/T"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" parent="H/T" instance=ExtResource( 2 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="About" parent="H/T" instance=ExtResource( 3 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
custom_styles/panel = SubResource( 2 )
[connection signal="pressed" from="H/V/bContinue" to="." method="_on_bContinue_pressed"]
[connection signal="pressed" from="H/V/bOptions" to="." method="_on_bOptions_pressed"]
[connection signal="pressed" from="H/V/bAbout" to="." method="_on_bAbout_pressed"]
[connection signal="pressed" from="H/V/bQuit" to="." method="_on_bQuit_pressed"]
